tests/paczka1/small_fuzzy/51191694.err
Error in line 5: N12CoYPqKex A957 223,8
Error in line 6: 83MBd2k A693 643,3
